Added GET /courses and POST /courses as well as dev middleware (needs to be updated)
